support free structure for schedules in minion config

--- a/salt/files/minion.d/f_defaults.conf
+++ b/salt/files/minion.d/f_defaults.conf
@@ -374,20 +374,26 @@ mine_functions:
 # When using the scheduler at least one schedule needs to be
 # defined. The user running the salt master will need read access to the repo.
 {% if 'schedule' in cfg_minion -%}
-{%- do default_keys.append('schedule') %}
+# Don't be opinionated about format of schedule yaml.
+  {% if cfg_minion['schedule'] is mapping -%}
+{{ get_config('schedule', '') }}
+  {% else -%}
+## or do... (for backwards compatibility)
+    {%- do default_keys.append('schedule') %}
 schedule:
-{%- for schedule in cfg_minion['schedule'] %}
-{%- if schedule is iterable and schedule is not string %}
-  {%- for name, children in schedule.items() %}
+    {%- for schedule in cfg_minion['schedule'] %}
+      {%- if schedule is iterable and schedule is not string %}
+        {%- for name, children in schedule.items() %}
     {{ name }}:
-  {%- for child in children %}
-    {%- for key, value in child.items() %}
+          {%- for child in children %}
+            {%- for key, value in child.items() %}
       {{ key }}: {{ value }}
+            {%- endfor -%}
+          {%- endfor -%}
+        {%- endfor -%}
+      {%- endif -%}
     {%- endfor -%}
-  {%- endfor -%}
-  {%- endfor -%}
-{%- endif -%}
-{%- endfor -%}
+  {% endif -%}
 {%- endif %}
 
 
