fix whitespace formatting

--- a/salt/files/minion.d/f_defaults.conf
+++ b/salt/files/minion.d/f_defaults.conf
@@ -375,9 +375,9 @@ mine_functions:
 # defined. The user running the salt master will need read access to the repo.
 {% if 'schedule' in cfg_minion -%}
 # Don't be opinionated about format of schedule yaml.
-  {% if cfg_minion['schedule'] is mapping -%}
+  {%- if cfg_minion['schedule'] is mapping %}
 {{ get_config('schedule', '') }}
-  {% else -%}
+  {%- else -%}
 ## or do... (for backwards compatibility)
     {%- do default_keys.append('schedule') %}
 schedule:
